k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devops-task-app-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: devops-task.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: devops-task-app-service
                port:
                  number: 80
